feat: seperate all logic into small methods

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,24 +3,13 @@ FROM python:3.9-slim
 WORKDIR /usr/src/app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 COPY . .
 
-RUN apt-get update && apt-get install -y \
-    wget \
-    unzip \
-    curl \
-    libx11-dev \
-    libgdk-pixbuf2.0-0 \
-    libcanberra-gtk-module \
-    && wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip \
-    && unzip chromedriver_linux64.zip \
-    && mv chromedriver /usr/local/bin/ \
-    && chmod +x /usr/local/bin/chromedriver
+RUN apt-get update && apt-get install -y wget unzip && \
+    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
+    apt install -y ./google-chrome-stable_current_amd64.deb && \
+    rm ./google-chrome-stable_current_amd64.deb && \
+    apt-get clean
 
-RUN useradd python
-RUN chown -R python /usr/src/app
-USER python
-
-CMD ["python", "main.py"]
