--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,9 +12,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Docker compose up
-        run: docker compose -f app/docker-compose.yaml up -d
-      - name: Start main.py
-        run: docker exec -it webscraper python main.py
-      - name: Docker compose down
-        run: docker compose -f app/docker-compose.yaml down
+      - name: Build the Docker image
+        run: python3 scripts/start.py
